fix(topic-timeline): avoid issue aftter resizing
when users resize the window to mobile, scroll and back to desktop the component doesn't have the
custom layout until scroll happens again, to avoid the layout look off we will hide temporaly those
buttons and they will appear after scroll. This happens because we apply the custom layout only
when resolution is >= 1200 to avoid issues with the topic-timeline fullscreen feature

--- a/scss/widgets/topic-timeline.scss
+++ b/scss/widgets/topic-timeline.scss
@@ -39,6 +39,11 @@ $container-post-width-xl: map-get(
 
   .topic-timeline {
     display: flex;
+
+    > .timeline-footer-controls {
+      // Avoid to render the controls outside the wrapper after user resize the window
+      display: none;
+    }
   }
 
   .timeline-scrollarea-wrapper {
